@@ -3,7 +3,7 @@
 TODO for 0.31
 =============
 
-- Make export dialog honour filename
+- Make export dialog honour filename (DONE)
 - Make internal canvas position floating-point (DONE)
 - Split ::Modified and ::Update flags in SPObject
 - Fix zooming into scaled text
